Fix toaster z-index issue

--- a/client/src/modules/common/layout/HeaderNav/HeaderNav.scss
+++ b/client/src/modules/common/layout/HeaderNav/HeaderNav.scss
@@ -1,6 +1,5 @@
 @import '../../../../styles/shared.scss';
 .ui.menu.top-menu {
-    z-index: 0;
     border: none;
     .logo {
         width: $sidebar-left-width;
